avoid scrollbar button cut-off in FF

--- a/src/main/webapp/keyfeature4/scripts/rod-shadow.css
+++ b/src/main/webapp/keyfeature4/scripts/rod-shadow.css
@@ -67,7 +67,7 @@
 	background: #e3f1fc;
 	position: absolute;
 	top: 31px;
-	right: 15px;
+	right: 16px;
 	text-align: center;
 	color: #50a3b1;
 	z-index: 1;
@@ -78,7 +78,7 @@
 	background: transparent;
 	position: absolute;
 	top: 31px;
-	right: 15px;
+	right: 16px;
 	z-index: 2;
 }
 
